--- a/MvcApp/Views/Home/Index.cshtml
+++ b/MvcApp/Views/Home/Index.cshtml
@@ -9,27 +9,32 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Адресная книга</title>
+    <link href="@Url.Content("~/Content/Home.css")" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div>
         <h3>Контакты</h3>
         <table>
             <tr>
-                <td><p>ФИО</p></td>
-                <td><p>Телефон</p></td>
-                <td><p>Эл. почта</p></td>
-                <td><p>Подразделение</p></td>
-                <td><p>Должность</p></td>
+                <th>ФИО</th>
+                <th>Телефон</th>
+                <th>Эл. почта</th>
+                <th>Должность</th>
             </tr>
-            @foreach (MvcApp.Models.AddressBook c in Model)
+            @foreach (IGrouping<string, MvcApp.Models.AddressBook> department in Model)
             {
-                <tr>
-                    <td><p>@c.FullName</p></td>
-                    <td><p>@c.PhoneNumber</p></td>
-                    <td><p>@c.EMail</p></td>
-                    <td><p>@c.Department</p></td>
-                    <td><p>@c.Position</p></td>
+                <tr class="department-row">
+                    <td colspan="4">@department.Key</td>
                 </tr>
+                foreach (var contact in department.OrderBy(c => c.FullName))
+                {
+                    <tr>
+                        <td>@contact.FullName</td>
+                        <td>@contact.PhoneNumber</td>
+                        <td>@contact.EMail</td>
+                        <td>@contact.Position</td>
+                    </tr>
+                }
             }
         </table>
     </div>
